# crispy-vault

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml
dev-stuff/: sqlite-setup.sql
src/: App.tsx  router.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/resources/: seed-data.sql  sqlite-setup.sql  test-queries.sql
src-tauri/src/: asset.rs  database.rs  invoke.rs  main.rs
src-tauri/src/asset/: commands.rs  utils.rs
src-tauri/src/asset/commands/: add_file_to_asset.rs  create_asset.rs  delete_asset_file.rs  edit_asset_file.rs  get_asset.rs  list_asset_files.rs  list_assets.rs
src-tauri/src/tag/: commands.rs
src-tauri/src/tag/commands/: tag_search.rs
src/components/: Breadcrumbs.tsx  OmniSearch.tsx  RouteError.tsx
src/components/OmniSearch/: OmniSearch.tsx
src/components/form/: FilePickerInput.tsx
src/routes/add-asset/: AddAssetRoute.tsx  route.ts
src/routes/asset/: AddFileDialog.tsx  AddFileForm.tsx  AssetFileListItem.tsx  AssetRoute.tsx  EditFileForm.tsx
src/routes/home/: HomeRoute.tsx  route.ts
src/routes/list-assets/: ListAssetsRoute.tsx
src/routes/root/: AppBar.tsx  RootRoute.tsx
src/routes/test/: TestRoute.tsx
src/routes/view-assets/: ViewAssetsRoute.tsx
src/sandbox/: Sandbox.tsx  main.tsx
src/sandbox/AssetTree/: AssetTree.tsx  data.tsx  notes.md
src/utils/: route.ts
