[package]
name = "crispy-vault"
version = "0.1.0"
description = "An audio library management application for producers and composers"
authors = ["Surguy.Derek@gmail.com"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["array", "bundled", "trace", "vtab"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
anyhow = "1.0"
anyhow-tauri = "1.0"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
